@@ -7,4 +7,5 @@
 {% block content %}
   <h2>Not Found</h2>
   <p>Oops!  That page can't be found.  Error 404.</p>
+  <p>Try looking again from the <a href="/">Home page</a></p>
 {% endblock %}
